--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "channels[daphne]>=4.2.0",
     "djangorestframework>=3.15.2",
+    "pillow>=11.1.0",
     "python-decouple>=3.8",
 ]
